--- a/DecouverteWinForm/DecouverteWinForm.csproj
+++ b/DecouverteWinForm/DecouverteWinForm.csproj
@@ -47,6 +47,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="core\Elements\Bonhomme.cs" />
+    <Compile Include="core\Elements\Element.cs" />
+    <Compile Include="core\Figures\Arc.cs" />
+    <Compile Include="core\Figures\Cercle.cs" />
+    <Compile Include="core\Figures\Disque.cs" />
+    <Compile Include="core\Figures\Ellipse.cs" />
+    <Compile Include="core\Figures\Figure.cs" />
+    <Compile Include="core\Figures\Ligne.cs" />
+    <Compile Include="core\Figures\Polygone.cs" />
+    <Compile Include="core\Figures\Rectangle.cs" />
+    <Compile Include="core\Figures\Rotation.cs" />
     <Compile Include="core\FileGUI.cs" />
     <Compile Include="core\Ressource.cs" />
     <Compile Include="EcranAccueil.cs">
@@ -66,6 +77,12 @@
     </Compile>
     <Compile Include="FicEditeur.Designer.cs">
       <DependentUpon>FicEditeur.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FicHorloge.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FicHorloge.Designer.cs">
+      <DependentUpon>FicHorloge.cs</DependentUpon>
     </Compile>
     <Compile Include="FicListe.cs">
       <SubType>Form</SubType>
@@ -91,6 +108,15 @@
     <Compile Include="FicSpirographe.Designer.cs">
       <DependentUpon>FicSpirographe.cs</DependentUpon>
     </Compile>
+    <Compile Include="FicSpirographe2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FicSpirographe2.Designer.cs">
+      <DependentUpon>FicSpirographe2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Horloge.cs">
+      <DependentUpon>FicHorloge.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="EcranAccueil.resx">
@@ -101,6 +127,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FicEditeur.resx">
       <DependentUpon>FicEditeur.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FicHorloge.resx">
+      <DependentUpon>FicHorloge.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FicListe.resx">
       <DependentUpon>FicListe.cs</DependentUpon>
