--- a/DecouverteWinForm/DecouverteWinForm.csproj
+++ b/DecouverteWinForm/DecouverteWinForm.csproj
@@ -72,6 +72,12 @@
     <Compile Include="FicAPropos.Designer.cs">
       <DependentUpon>FicAPropos.cs</DependentUpon>
     </Compile>
+    <Compile Include="FicClavierSouris.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FicClavierSouris.Designer.cs">
+      <DependentUpon>FicClavierSouris.cs</DependentUpon>
+    </Compile>
     <Compile Include="FicEditeur.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,16 +120,25 @@
     <Compile Include="FicSpirographe2.Designer.cs">
       <DependentUpon>FicSpirographe2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Graphique.cs">
+      <DependentUpon>FicSpirographe2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Horloge.cs">
       <DependentUpon>FicHorloge.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spirographe.cs">
+      <DependentUpon>FicSpirographe2.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="EcranAccueil.resx">
       <DependentUpon>EcranAccueil.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FicAPropos.resx">
       <DependentUpon>FicAPropos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FicClavierSouris.resx">
+      <DependentUpon>FicClavierSouris.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FicEditeur.resx">
       <DependentUpon>FicEditeur.cs</DependentUpon>
@@ -142,6 +157,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FicSpirographe.resx">
       <DependentUpon>FicSpirographe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FicSpirographe2.resx">
+      <DependentUpon>FicSpirographe2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
