--- a/DecouverteWinForm/DecouverteWinForm.csproj
+++ b/DecouverteWinForm/DecouverteWinForm.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="core\Couple.cs" />
     <Compile Include="core\Elements\Bonhomme.cs" />
     <Compile Include="core\Elements\Element.cs" />
     <Compile Include="core\Figures\Arc.cs" />
